<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zentrox Fit</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_week">Semana</string>
    <string name="nav_ai">IA</string>
    <string name="nav_history">Historico</string>
    <string name="nav_profile">Perfil</string>
    <string name="greeting">Ola</string>
    <string name="ready_train">Pronto para treinar hoje?</string>
    <string name="streak_days">Dias seguidos</string>
    <string name="workouts_done">Treinos feitos</string>
    <string name="today_is">Hoje e dia de…</string>
    <string name="tap_exercises">Toque para ver os exercicios</string>
    <string name="rest_day">Hoje e dia de descanso!</string>
    <string name="workouts_by_muscle">Treinos por musculo</string>
    <string name="tools">Ferramentas</string>
    <string name="ai_assistant">Assistente IA</string>
    <string name="timer">Timer</string>
    <string name="weight_log">Registro de Peso</string>
    <string name="calc_bmi">Calcular IMC</string>
    <string name="customize_workouts">Personalizar Treinos</string>
    <string name="muscle_chest">Peito</string>
    <string name="muscle_back">Costas</string>
    <string name="muscle_legs">Pernas</string>
    <string name="muscle_shoulders">Ombros</string>
    <string name="muscle_arms">Bracos</string>
    <string name="muscle_abs">Abdomen</string>
    <string name="weekly_plan">PLANO SEMANAL</string>
    <string name="today">HOJE</string>
    <string name="strength">Forca</string>
    <string name="definition">Definicao</string>
    <string name="weight_loss">Perda de Peso</string>
    <string name="start_workout">INICIAR TREINO</string>
    <string name="rest">DESCANSO</string>
    <string name="start">INICIAR</string>
    <string name="pause">PAUSAR</string>
    <string name="reset">RESETAR</string>
    <string name="time_up">Tempo esgotado!</string>
    <string name="history">HISTORICO</string>
    <string name="no_history">Nenhum treino registrado ainda</string>
    <string name="profile">PERFIL</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="weight_kg">Peso (kg)</string>
    <string name="height_cm">Altura (cm)</string>
    <string name="gender">Genero</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="objective">Objetivo</string>
    <string name="save">SALVAR</string>
    <string name="saved_success">Perfil salvo com sucesso!</string>
    <string name="welcome">Bem-vindo ao Zentrox Fit</string>
    <string name="configure_profile">Configure seu perfil para comecar</string>
    <string name="start_btn">COMECAR</string>
    <string name="your_name">Seu nome</string>
    <string name="name_placeholder">Digite seu nome</string>
    <string name="age_placeholder">Ex: 25</string>
    <string name="weight_history">Historico de Peso</string>
    <string name="your_weight_today">Seu peso hoje (kg)</string>
    <string name="register">REGISTRAR</string>
    <string name="enter_weight">Digite seu peso!</string>
    <string name="bmi_calculator">CALCULAR IMC</string>
    <string name="calculate">CALCULAR</string>
    <string name="fill_fields">Preencha todos os campos!</string>
    <string name="below_weight">Abaixo do peso</string>
    <string name="normal_weight">Peso normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity_1">Obesidade I</string>
    <string name="obesity_2">Obesidade II</string>
    <string name="obesity_3">Obesidade III</string>
    <string name="ai_title">ASSISTENTE IA</string>
    <string name="ai_greeting">Ola! Sou o assistente do Zentrox Fit. Como posso te ajudar hoje?</string>
    <string name="type_message">Digite sua mensagem...</string>
    <string name="send">Enviar</string>
    <string name="customize_title">PERSONALIZAR TREINOS</string>
    <string name="customize_info">Personalize seus treinos!</string>
    <string name="customize_desc">Arraste os exercicios para reordenar ou mova entre musculos. Seu treino personalizado sera salvo automaticamente.</string>
    <string name="exercises">exercicios</string>
    <string name="add_exercise">Adicionar exercicio...</string>
    <string name="save_customization">SALVAR PERSONALIZACAO</string>
    <string name="restore_default">RESTAURAR PADRAO</string>
    <string name="customization_saved">Personalizacao salva com sucesso!</string>
    <string name="confirm_restore">Tem certeza que deseja restaurar o treino padrao?</string>
    <string name="restored_default">Treino restaurado para o padrao!</string>
    <string name="language">Idioma</string>
    <string name="select_language">Selecionar idioma</string>
    <string name="home_option">Opcoes</string>
    <string name="weekly_schedule">Treino da semana</string>
    <string name="register_weight">Registrar peso</string>
    <string name="view_bmi">Ver IMC</string>
    <string name="update_profile">Atualizar perfil</string>
    <string name="today_workout">TREINO DE HOJE</string>
    <string name="timer_title">TIMER</string>
    <string name="timer_start">INICIAR</string>
    <string name="timer_reset">RESETAR</string>
    <string name="timer_hint">Toque para pausar/continuar</string>
    <string name="history_title">HISTORICO</string>
    <string name="customize_short">Personalizar treinos</string>
    <string name="weekly_plan_title">PLANO SEMANAL</string>
    <string name="splash_tagline">TRANSFORME SEU CORPO</string>
    <string name="splash_subtitle">Seu personal trainer digital</string>
    <string name="header_title">ZENTROX</string>
    <string name="greeting_athlete">Ola, Atleta!</string>
    <string name="weight_label">Peso: --</string>
    <string name="bmi_label">IMC: --</string>
    <string name="objective_label">Objetivo</string>
    <string name="monday">Segunda-feira</string>
    <string name="chest_triceps">Peito, Triceps</string>
    <string name="evolution">Evolucao</string>
    <string name="options">OPCOES</string>
    <string name="weekly_schedule_emoji">Treino da semana</string>
    <string name="register_weight_emoji">Registrar peso</string>
    <string name="view_bmi_emoji">Ver IMC</string>
    <string name="update_profile_emoji">Atualizar perfil</string>
    <string name="evolution_title">EVOLUCAO</string>
    <string name="bmi_title">SEU IMC</string>
    <string name="today_workout_title">TREINO DO DIA</string>
    <string name="workout_day">TREINO - Segunda</string>
    <string name="register_weight_title">REGISTRAR PESO</string>
    <string name="current_weight">Peso atual</string>
    <string name="hint_assistant">Pergunte ao assistente...</string>
    <string name="hint_height">Altura (m) ex: 1.65</string>
    <string name="hint_example">Ex: 75.5</string>
    <string name="monday_full">Segunda-feira</string>
    <string name="tuesday_full">Terca-feira</string>
    <string name="wednesday_full">Quarta-feira</string>
    <string name="thursday_full">Quinta-feira</string>
    <string name="friday_full">Sexta-feira</string>
    <string name="saturday_full">Sabado</string>
    <string name="sunday_full">Domingo</string>
    <string name="tuesday">Terca</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="equipment">Aparelho</string>
    <string name="alt_home">Alternativas em casa:</string>
    <string name="alt_equipment">Alternativas com aparelho:</string>
    <string name="muscles">Musculos</string>
    <string name="rest_label">Descanso</string>
    <string name="ai_greeting_full">Ola! Sou seu assistente de treinos. Pode perguntar sobre:\n\n- Treinos e exercicios\n- Alimentacao e hidratacao\n- Descanso e recuperacao\n- Motivacao\n- IMC e saude\n\nComo posso te ajudar?</string>
    <string name="ai_suggestion_1">Treino de hoje</string>
    <string name="ai_suggestion_2">Me motive</string>
    <string name="ai_suggestion_3">Dica de alimentacao</string>
</resources>
